[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/gui/level_select/LevelSelect.gd" type="Script" id=2]
[ext_resource path="res://scenes/game/main/Game.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/fonts/Bungee/Bungee-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/gui/components/background/BG.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/game/main/Tutorial.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/gui/components/Button.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 96
outline_size = 12
outline_color = Color( 0.2, 0.2, 0.2, 1 )
use_filter = true
font_data = ExtResource( 4 )

[node name="LevelSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 1314, -151 )
script = ExtResource( 2 )
tutorial_game = ExtResource( 6 )
main_game = ExtResource( 3 )

[node name="BG" parent="." instance=ExtResource( 5 )]

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/margin_right = 64
custom_constants/margin_top = 32
custom_constants/margin_left = 64
custom_constants/margin_bottom = 32

[node name="Label" type="Label" parent="MarginContainer"]
margin_left = 64.0
margin_top = 32.0
margin_right = 456.0
margin_bottom = 129.0
custom_fonts/font = SubResource( 1 )
text = "Levels"

[node name="ButtonList" type="VBoxContainer" parent="."]
anchor_left = 0.6
anchor_top = 0.4
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 0
grow_vertical = 0
alignment = 1

[node name="TutorialBtn" parent="ButtonList" instance=ExtResource( 7 )]
margin_left = 101.0
margin_top = 86.0
margin_right = 205.0
margin_bottom = 126.0
text = "Tutorial"

[node name="MainBtn" parent="ButtonList" instance=ExtResource( 7 )]
margin_left = 82.0
margin_top = 130.0
margin_right = 225.0
margin_bottom = 170.0
text = "Main Game"

[node name="BackBtn" parent="ButtonList" instance=ExtResource( 7 )]
margin_left = 119.0
margin_top = 174.0
margin_right = 188.0
margin_bottom = 214.0
text = "Back"

[connection signal="pressed" from="ButtonList/TutorialBtn" to="." method="_on_TutorialBtn_pressed"]
[connection signal="pressed" from="ButtonList/MainBtn" to="." method="_on_MainBtn_pressed"]
[connection signal="pressed" from="ButtonList/BackBtn" to="." method="_on_BackBtn_pressed"]
